# llm_duck

./: .gitignore  README.md  animate_event_maps.ipynb  geo.py  llm_categorize.ipynb  llm_duck.py  llm_reasoning.ipynb  modzcta_sanity_check.ipynb  nyc_data_analysis.ipynb  pyproject.toml  run_mcp_server.py  setup.py
data/: categories.json
data/cityofnewyork/: .gitignore
data_mcp/: README.md  __init__.py  config.py  database.py  exceptions.py  main.py  models.py  server.py  test_main.py  test_schema.py
output/: invalid_categories_2024.csv  llm_categorize_output_2024.csv  llm_reasoning_output.csv
src/: choropleth_map_animation.py  duckdb_prompt_udf.py  heatmap_animation.py  map_animation_base.py
