[project]
name = "llm_duck"
version = "0.1.0"
description = "LLM prompt in DuckDB SQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "duckdb>=1.2.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jupysql>=0.11.1",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.10.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.11.2",
]

[tool.jupysql.SqlMagic]
feedback = true
autopandas = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
